<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaRegistro">

    <TextView
        android:id="@+id/txt_titulo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txt_registro_usuario"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/edt_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/txt_titulo_registro"
        app:layout_constraintStart_toStartOf="@+id/txt_titulo_registro"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_registro" />

    <EditText
        android:id="@+id/edt_emailRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/edt_email_registro"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombre"
        app:layout_constraintStart_toStartOf="@+id/edt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre" />

    <EditText
        android:id="@+id/edt_passwordregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/edt_passwordregistro"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_emailRegistro"
        app:layout_constraintStart_toStartOf="@+id/edt_emailRegistro"
        app:layout_constraintTop_toBottomOf="@+id/edt_emailRegistro" />

    <EditText
        android:id="@+id/edt_passwordrepetir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/edt_passwordrepetir"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_passwordregistro"
        app:layout_constraintStart_toStartOf="@+id/edt_passwordregistro"
        app:layout_constraintTop_toBottomOf="@+id/edt_passwordregistro" />

    <EditText
        android:id="@+id/edt_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/edt_telefono"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_passwordrepetir"
        app:layout_constraintStart_toStartOf="@+id/edt_passwordrepetir"
        app:layout_constraintTop_toBottomOf="@+id/edt_passwordrepetir" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="127dp"
        android:layout_height="157dp"
        android:contentDescription="@string/Imagen_registro"
        app:layout_constraintEnd_toEndOf="@+id/txt_titulo_registro"
        app:layout_constraintStart_toStartOf="@+id/txt_titulo_registro"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_registro"
        app:srcCompat="@drawable/registrarse" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="registrarse"
        android:text="@string/btn_registrarse"
        android:textColor="#212121"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_telefono"
        app:layout_constraintStart_toStartOf="@+id/edt_telefono"
        app:layout_constraintTop_toBottomOf="@+id/edt_telefono" />

    <TextView
        android:id="@+id/txt_volver_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/txt_volver_principal"
        android:minHeight="48dp"
        android:onClick="volverInicio"
        android:textColorHint="@color/design_default_color_error"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_registro"
        app:layout_constraintEnd_toEndOf="@+id/edt_telefono"
        app:layout_constraintStart_toStartOf="@+id/edt_telefono"
        app:layout_constraintTop_toBottomOf="@+id/edt_telefono" />
</androidx.constraintlayout.widget.ConstraintLayout>