<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edt_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:autofillHints="no" />

    <Button
        android:id="@+id/btn_acceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:onClick="acceder"
        android:text="@string/btn_acceder"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="163dp"
        android:layout_height="194dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login"
        android:contentDescription="@string/imagen" />

    <TextView
        android:id="@+id/txt_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/txt_registro"
        android:textSize="18sp"
        android:onClick="registrarse"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

</androidx.constraintlayout.widget.ConstraintLayout>